fixed a small clipping issue

--- a/src/app/weather-info/weather-info.component.scss
+++ b/src/app/weather-info/weather-info.component.scss
@@ -32,6 +32,10 @@ h1 {
   }
 }
 
+.slider {
+  margin-top: 3px;
+}
+
 @media only screen and (orientation: portrait) {
   .container {
     padding: 5vw;
